# shape

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
.github/workflows/: test_and_build.yml
models/: analysis.cfg
shape/: game_logic.py  main.py
shape/katago/: analysis.cfg  downloader.py  engine.py
shape/ui/: board_view.py  main_window.py  score_graph.py  tab_analysis.py  tab_config.py  tab_main_control.py  ui_utils.py
stone/: game_logic.py  main.py  utils.py
stone/katago/: engine.py
stone/ui/: board_view.py  main_window.py  tab_analysis.py  tab_config.py  tab_main_control.py
tests/: test_game_logic.py  test_game_logic_extended.py  test_utils.py
